Added links to my file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Maru A Pula</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Welcome to Maru a pula app</h1>
+    <footer>
+        Coded by <a href="https://github.com/Aletswalo"> Annah Letswalo </a> hosted on <a href="https://github.com/Aletswalo/maru"> Github </a> and built on <a href="https://maru-a-pula.netlify.app/"> Netlify </a>
+    </footer>
 </body>
 </html>
