Updated the footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to Maru a pula app</h1>
     <footer>
-        Coded by <a href="https://github.com/Aletswalo"> Annah Letswalo </a> built on <a href="https://github.com/Aletswalo/maru"> Github </a> and hosted on <a href="https://maru-a-pula.netlify.app/"> Netlify </a>
+        Coded by <a href="https://github.com/Aletswalo" target="_blank"> Annah Letswalo </a> built on <a href="https://github.com/Aletswalo/maru" target="_blank"> Github </a> and hosted on <a href="https://maru-a-pula.netlify.app/" target="_blank"> Netlify </a>
     </footer>
 </body>
 </html>
