--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     <title>Maru A Pula</title>
 </head>
 <body>
-    <h1>Welcome to Maru a pula app</h1>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city.." required />
+            <input type="submit" value="Search" />
+        </form>
+
+    </header>
+    <main>
+        <div>
+    <h1>Johannesburg</h1>
+    <p>
+        Tuesday 14:49, scattered clouds
+        <br />
+        Humidity: 66%, Wind: 3.13km/h 
+    </p>
+        </div>
+    <div>
+      🌞 12&deg;C 
+    </div>
+    </main>
+
     <footer>
         Coded by <a href="https://github.com/Aletswalo" target="_blank"> Annah Letswalo </a> built on <a href="https://github.com/Aletswalo/maru" target="_blank"> Github </a> and hosted on <a href="https://maru-a-pula.netlify.app/" target="_blank"> Netlify </a>
     </footer>
