--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Madimi+One&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/index.css" />
     <title>Maru A Pula</title>
 </head>
 <body>
+    <div class="weather-app">
     <header>
         <form>
             <input type="search" placeholder="Enter a city.." required />
@@ -30,5 +35,6 @@
     <footer>
         Coded by <a href="https://github.com/Aletswalo" target="_blank"> Annah Letswalo </a> built on <a href="https://github.com/Aletswalo/maru" target="_blank"> Github </a> and hosted on <a href="https://maru-a-pula.netlify.app/" target="_blank"> Netlify </a>
     </footer>
+    </div>
 </body>
 </html>
