Added the basic search engine without the API

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="weather-app">
     <header>
-        <form class="search-form">
-            <input type="search" placeholder="Enter a city.." required class="search-form-input" />
+        <form class="search-form" id="search-form">
+            <input type="search" placeholder="Enter a city.." required id="search-form-input" class="search-form-input" />
             <input type="submit" value="Search" class="search-form-button" />
         </form>
 
@@ -21,7 +21,7 @@
     <main>
         <div class="weather-app-data">
         <div>
-    <h1 class="weather-app-city">Johannesburg</h1>
+    <h1 class="weather-app-city" id="city">Johannesburg</h1>
     <p class="weather-app-details">
         Tuesday 14:49, scattered clouds
         <br />
@@ -38,5 +38,7 @@
         Coded by <a href="https://github.com/Aletswalo" target="_blank"> Annah Letswalo </a> built on <a href="https://github.com/Aletswalo/maru" target="_blank"> Github </a> and hosted on <a href="https://maru-a-pula.netlify.app/" target="_blank"> Netlify </a>
     </footer>
     </div>
+    <script src="src/index.js"></script>
+
 </body>
 </html>
