--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </p>
         </div>
     <div class="weather-app-container">
-      <div class="weather-app-icon">🌞</div> <div class="weather-app-temperature"> 12</div><div class="weather-app-unit">&deg;C</div> 
+      <div class="weather-app-icon">🌞</div> <div class="weather-app-temperature" id="temperature"> 12</div><div class="weather-app-unit">&deg;C</div> 
     </div>
         </div>
     </main>
