--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
       <div class="weather-app-icon">🌞</div> <div class="weather-app-temperature" id="temperature"> </div><div class="weather-app-unit">&deg;C</div> 
     </div>
         </div>
+        <div class="weather-forecast">
+            <div class="row">
+                <div class="col-2">
+                    <div class="weather-forecast-date">Thu</div>
+                    <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-night.png" alt=""width="36" />
+                    <div class="weather-app-forecast-temp">
+                        <span class="weather-forecast-temperature-max">18&deg; </span>
+                        <span class="weather-forecast-temperature-min">12&deg; </span>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
